# ml-utils

./: .gitignore  README.md  gemini_classifier.py  gui_key_frame_extractor.py  key_frame_extractor.py  pyproject.toml  reddit_scraper.py  requirements.txt  video_frame_dumper.py
frame_dumpers/: video_frame_dumper.py
gemini_classifier/: gemini_classifier.py  readme.md
scrapers/: youtube_scaper.py
scrapers/reddit/cli/: readme.md  reddit_scraper.py
scrapers/youtube/cli/: readme.md  youtube_scaper.py
